--- a/users/templates/main.html
+++ b/users/templates/main.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%block title%}{%endblock%}</title>
+    <!-- Dynamický blok pro specifické CSS -->
+    {% block styles %}{% endblock %}
 
 </head>
 <body>
