--- a/users/templates/studenti.html
+++ b/users/templates/studenti.html
@@ -4,6 +4,11 @@
 Studenti
 {%endblock%}
 
+{% block styles %}
+{%load static%}
+    <link rel="stylesheet" href="{% static 'styles/users.css' %}">
+{% endblock %}
+
 {%block content%}
     {%if request.user.is_authenticated and request.user.role == "ucitel" or request.user.role == "admin"%}
     <table>
