--- a/users/templates/uzivatele.html
+++ b/users/templates/uzivatele.html
@@ -4,6 +4,11 @@
 Uživatelé
 {%endblock%}
 
+{% block styles %}
+{%load static%}
+    <link rel="stylesheet" href="{% static 'styles/users.css' %}">
+{% endblock %}
+
 {%block content%}
     {%if request.user.is_authenticated and request.user.role == "admin"%}
         <table>
