Funkční samostatná aplikace login, změna url pro uživatele --> /uzivatele (pro admina) a /uzivatele/studenti (pro ucitele)

--- a/static/styles/users.css
+++ b/static/styles/users.css
@@ -2,6 +2,6 @@
 je tam bude rozdil, ze v uzivatelich budou pozdeji asi funkce pro admina, aby mohl uzivatele mazat a tak*/
 
 body {
-    background-color: aqua;
+    background-color: rgb(255, 255, 255);
 }
 
