--- a/users/templates/main.html
+++ b/users/templates/main.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%block title%}{%endblock%}</title>
-    <!-- Dynamický blok pro specifické CSS -->
     {% block styles %}{% endblock %}
 
 </head>
 <body>
+    {%load static%}
+    <img src="{% static 'images/purkynka-logo.png' %}" alt="purkynka-logo"><!--tohle si dej kam chces, ale dal bych tam logo skoly-->
     <!--vše zde si představuju v nějakým menu napravo nahoře, kde bude právě jen napsaný účet a když si to rozklikne, tak
     uvidí vše co potřebuje (jméno, příjmení, blabla, to vymyslíš)-->
     <p>Účet</p>
     <p>{{ user.jmeno }} {{ user.prijmeni }}</p>
     <p>
-        <form method="post" action="{% url 'logout' %}">
+        <form method="post" action="{% url 'logout_user' %}">
             {% csrf_token %}
             <button type="submit">Odhlásit</button>
         </form>
