--- a/user_auth/templates/login.html
+++ b/user_auth/templates/login.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrace</title>
+    <title>Přihlášení</title>
 </head>
 <body>
-    <h1>Registrace</h1>
+    <h1>Přihlášení</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Registrovat</button>
+        <button type="submit">Přihlásit</button>
     </form>
-    <br>
-    <a href="{% url 'login' %}">Již máte účet? Přihlaste se zde</a>
 </body>
 </html>
