Přidání funkce na schválení a odmitnutí práce + implikace v uzivatele/studenti pro učitele

--- a/static/styles/users-studenti.css
+++ b/static/styles/users-studenti.css
@@ -16,3 +16,8 @@ li {
 .list-group {
     margin-bottom: 0 !important;
 }
+
+.list-group-item {
+    margin-bottom: 2% !important;
+    padding: 5px;
+}
